[package]
name = "neon-test-output-example"
version = "0.1.0"
authors = ["Thomas Mayfield <Thomas.Mayfield@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "neon_test_output_example"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = { git = "https://github.com/neon-bindings/neon/" }

[dependencies]
neon = { git = "https://github.com/neon-bindings/neon/", features = ["default-panic-hook"] }

[features]
default-panic-hook = []
